dockerreg/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 4g
spec:
  tls:
  - hosts:
    - docker.dulik.net
    secretName: docker-registry-tls-certificate
  rules:
  - host: docker.dulik.net
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
